--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,6 +21,9 @@ jobs:
           sudo apt install -y ffmpeg
           sudo wget https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -O /usr/local/bin/yt-dlp
           sudo chmod a+rx /usr/local/bin/yt-dlp
+      - name: Run build
+        run: |
+          go build -o dlp && ./dlp get
       - name: Run tests
         run: |
           go test
